--- a/pair_union_limpieza.ipynb
+++ b/pair_union_limpieza.ipynb
@@ -3179,6 +3179,19 @@
    "source": [
     "df_unido.columns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Esto lo paso Cesar luego del pair:  \n",
+    "\n",
+    "columnas = df_final.columns\n",
+    "nuevas_columnas = {col: col.split(\"(\")[0].strip().replace(\" \", \"_\").replace(\"\\n\", \"\").replace(\":\", \"\").lower() for col in columnas}\n",
+    "df_final.rename(columns=nuevas_columnas, inplace = True)\n",
+    "\n",
+    "#Busqueda de patrones: importante. "
+   ]
   }
  ],
  "metadata": {
